[package]
name = "domcom-form-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
futures-signals = "0.3.33"
proc-macro2 = "1.0.70"
quote = "1.0.33"
regex = "1.10.3"
syn = "2.0.40"
